--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -7,6 +7,22 @@
 h2{
     margin-top:50px
 }
+.btn-facebook{
+    background-color: rgb(59,89,152);
+    color:white
+}
+.btn-google{
+    background-color: rgb(221,75,57);
+    color:white
+}
+.btn-twitter{
+    background-color: rgb(85,172,238);
+    color:white
+}
+.btn-linkedin{
+    background-color: rgb(0,123,182);
+    color:white
+}
 /* #create{
     margin-top: 7px;
 } */
