--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,15 +28,19 @@
               <!-- <button type="submit" [disabled]="angForm.pristine || angForm.invalid" class="btn btn-primary">Login</button> -->
             </div>
             <a routerLink="/forgotpassword">Forgot Password?</a>
-            <!-- <button class="btn btn-info" [routerLink]="['/forgotpassword']">Forgot Password</button> -->
           </form>
-          <!-- <button (click)="socialSignIn('facebook')">Sign in with Facebook</button> -->
-          <!-- <button (click)="socialSignIn('google')">Sign in with Google</button> -->
-          <!-- <button (click)="socialSignIn('linkedin')">Sign in with LinkedIn</button> -->
-          <button (click)="facebookLogin()">Sign in with Facebook</button>
-          <button (click)="googleLogin()">Sign in with Google</button>
-          <button (click)="twitterLogin()">Sign in with Twitter</button>
-          <button (click)="linkedinLogin()">Sign in with Linkedin</button>
+          <button class="btn btn-block btn-social btn-facebook" (click)="facebookLogin()">
+            <span class="fa fa-facebook"></span> Sign in with Facebook
+          </button>
+          <button class="btn btn-block btn-social btn-google" (click)="googleLogin()">
+            <span class="fa fa-google"></span> Sign in with Google
+          </button>
+          <button class="btn btn-block btn-social btn-twitter" (click)="twitterLogin()">
+            <span class="fa fa-twitter"></span> Sign in with Twitter
+          </button>
+          <button class="btn btn-block btn-social btn-linkedin" (click)="linkedinLogin()">
+            <span class="fa fa-linkedin"></span> Sign in with Linkedin
+          </button>
         </div><!--end of box-->
     </div><!--end of col-md-12-->
   </div><!--end of row-->
