--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -19,3 +19,19 @@
 #tag{
 margin-top: 40px;
 }
+.btn-facebook{
+    background-color: rgb(59,89,152);
+    color:white
+}
+.btn-google{
+    background-color: rgb(221,75,57);
+    color:white
+}
+.btn-twitter{
+    background-color: rgb(85,172,238);
+    color:white
+}
+.btn-linkedin{
+    background-color: rgb(0,123,182);
+    color:white
+}
