--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,6 +24,9 @@
               </div>
             </div>
             <div class="form-group">
+              <p-checkbox name="remember_me" value="Remember Me" label="Remember Me" formControlName="remember_me" inputId="remember_me"></p-checkbox>
+            </div>
+            <div class="form-group">
               <button type="submit" class="btn btn-primary">Login</button>
             </div>
             <a routerLink="/forgotpassword">Forgot Password?</a>
