--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -38,6 +38,9 @@
                   <div *ngIf="angForm.controls['name'].errors.required">
                     Name is required.
                   </div>
+                  <div *ngIf="angForm.controls['name'].hasError('pattern')">
+                    Name must not contain spaces.
+                  </div>
                 </div>
                 <div class="form-group">
                   <label class="col-md-4">User Name</label>
@@ -46,6 +49,9 @@
                 <div *ngIf="angForm.controls['username'].invalid && (angForm.controls['username'].dirty || angForm.controls['username'].touched)" class="alert alert-danger">
                   <div *ngIf="angForm.controls['username'].errors.required">
                     User Name is required.
+                  </div>
+                  <div *ngIf="angForm.controls['username'].hasError('pattern')">
+                    User Name must not contain spaces.
                   </div>
                 </div>
                 <div class="form-group">
@@ -73,6 +79,9 @@
                   </div>
                   <div *ngIf="angForm.controls['password'].hasError('maxlength')">
                     Password should be maximum 15 characters.
+                  </div>
+                  <div *ngIf="angForm.controls['password'].hasError('pattern')">
+                    Password must not contain spaces.
                   </div>
                 </div>
                 <div class="form-group">
