--- a/src/app/resetpassword/resetpassword.component.html
+++ b/src/app/resetpassword/resetpassword.component.html
@@ -14,6 +14,15 @@
             <div *ngIf="resetPasswordForm.controls['password'].errors.required">
               Password is required.
             </div>
+            <div *ngIf="resetPasswordForm.controls['password'].hasError('minlength')">
+              Password should be minimum of 6 characters
+            </div>
+            <div *ngIf="resetPasswordForm.controls['password'].hasError('maxlength')">
+              Password should be maximum 15 characters.
+            </div>
+            <div *ngIf="resetPasswordForm.controls['password'].hasError('pattern')">
+              Password must not contain spaces.
+            </div>
           </div>
           <div class="form-group">
             <label class="col-md-4">Confirm Password</label>
